[package]
name = "gdsl"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = [ "juliuskoskela" ]

description = "Graph Data Structure Library"
repository = "https://github.com/juliuskoskela/gdsl"

keywords = ["data-structure", "graph", "algorithms", "containers", "graph-theory"]
categories = ["Data structures"]

[dependencies]
min-max-heap = "1.3.0"
fnv = "1.0.3"

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3"

[[bench]]
name = "graph_benchmark"
harness = false
