[package]
name = "gdsl"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = [ "juliuskoskela" ]

description = "Graph Data Structure Library"
repository = "https://github.com/juliuskoskela/gdsl"

keywords = ["data-structure", "graph", "algorithms", "containers", "graph-theory"]
categories = ["Data structures"]

[dependencies]
min-max-heap = "1.3.0"
ahash = "0.8.0"
serde = "1.0.144"
serde_json = "1.0.85"
serde_cbor = "0.11.2"

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3.6"

[[bench]]
name = "graph_benchmark"
harness = false
