[package]
name = "gdsl"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = ["Julius Koskela <me@juliuskoskela.dev>"]

description = """
GDSL is a graph data-structure library including graph containers,
connected node strutures and efficient algorithms on those structures.
Nodes are independent of a graph container and can be used as connected
smart pointers.
"""
repository = "https://github.com/juliuskoskela/gdsl"

keywords = ["data-structures", "graphs", "algorithms", "containers", "graph-theory"]
categories = ["data-structures", "algorithms", "mathematics", "science"]

[dependencies]
ahash = "0.8.0"
serde = "1.0.144"
anyhow = "1.0.65"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"
serde_json = "1.0.85"
serde_cbor = "0.11.2"
petgraph = "0.6.2"
once_cell = "1.8.0"
rayon = "1.5.3"

[[bench]]
name = "graph_benchmark"
harness = false

[profile.release]
debug = true